# Auris

./: .gitignore  CMakeLists.txt  Concept.mm  Object Types.md  README.md
auris/: Object.hpp  Structure.hpp  auris.hpp
auris/aux/: Date.hpp  mapfile.hpp  sha1.hpp  uuid.hpp
auris/file/: Index.hpp  Object.hpp  Track.hpp  readwrite.hpp
aux/ffmpeg-test/source/: CMakeLists.txt  main.cpp
common/: Blob.h  Connection.cpp  Connection.h  Error.cpp  Error.h  FileSystem.cpp  FileSystem.h  MimeType.cpp  MimeType.h  Mutex.h  Path.cpp  Path.h  Socket.cpp  Socket.h  Thread.h  console.h  sha1_utils.cpp  sha1_utils.h  strutil.h  uuid.cpp  uuid.h
common/HTTP/: Connection.cpp  Connection.h  Error.cpp  Error.h  HeaderSet.cpp  HeaderSet.h  Request.cpp  Request.h  Response.cpp  Response.h
common/coding/: Decoder.cpp  Decoder.h  Encoder.cpp  Encoder.h  Error.h  JSONEncoder.cpp  JSONEncoder.h  Tree.h  XMLDecoder.cpp  XMLDecoder.h  XMLEncoder.cpp  XMLEncoder.h  YAMLEncoder.cpp  YAMLEncoder.h
database/: CMakeLists.txt  Connection.cpp  Connection.h  Database.cpp  Database.h  Entry.cpp  Entry.h  Field.cpp  Field.h  Playlist.h  Server.cpp  Server.h  ShufflePlaylist.cpp  ShufflePlaylist.h  Table.cpp  Table.h  main.cpp
database/Database/: Commit.cpp  Commit.h  Database.cpp  Database.h  Entity.cpp  Entity.h  Field.cpp  Field.h  Table.cpp  Table.h
database/Entry/: Album.h  Entry.cpp  Entry.h  Field.cpp  Field.h  Song.h
database/databas/: Commit.h  Field.h  Song.h  Table.cpp
database/database/: Database.cpp  Entity.cpp  Entity.h  Error.h  Field.cpp  Table.cpp  Table.h
database/media/: Store.cpp  Store.h
doc/: Database Protocol.txt  Doxyfile  Player Commands.txt  player_usecases.txt  playlist_example.xml
include/: json
modules/: FindLibAO.cmake
player/: CMakeLists.txt  Connection.cpp  Connection.h  Output.cpp  Output.h  Player.cpp  Player.h  Session.cpp  Session.h  main.cpp
source/: CMakeLists.txt  blob.h  channel.cpp  channel.h  filesystem.cpp  filesystem.h  httpchannel.cpp  httpchannel.h  library.cpp  library.h  log.h  main.cpp  md5.cpp  md5.h  path.cpp  path.h  server.cpp  server.h  subsystem.h  uuid.cpp  uuid.h
source/aux/: mapfile.hpp  trim.hpp
source/command/: rawcommand.h  response.cpp  response.h  subsystem.cpp  subsystem.h
source/common/: CMakeLists.txt  Date.hpp  sha1.hpp  uuid.cpp  uuid.hpp
source/connection/: connection.cpp  connection.h  subsystem.cpp  subsystem.h
source/connection/interfaces/: http.cpp  http.h  interface.h
source/db/: CMakeLists.txt  Database.cpp  Database.hpp  Index.hpp  Object.hpp  Structure.hpp  Track.hpp  Tracks.hpp  Version.hpp  tool.cpp
source/db/file/: Generic.hpp  Index.hpp  Object.hpp  Track.hpp  readwrite.hpp
source/metadata/: subsystem.cpp  subsystem.h
source/storage/: library.cpp  library.h  subsystem.cpp  subsystem.h
source/tools/: CMakeLists.txt  Generic.hpp  db-add.cpp  db-blob.cpp  db-cat-object.cpp  db-hash-object.cpp  db-list.cpp  db-meta.cpp  db-rev-list.cpp
tests/: CMakeLists.txt  Coding.cpp  Database.cpp  HTTP.cpp  LibAV.cpp  Mediastore.cpp  add-file.php
tools/: CMakeLists.txt  Generic.hpp  auris-dummy  db-add.cpp  db-blob.cpp  db-cat-object.cpp  db-hash-object.cpp  db-list.cpp  db-meta.cpp  db-rev-list.cpp
web/: upload.html
